# tts-devcontainer

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
test-data/: input.txt  transcript.txt
